--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!DOCTYPE html>
 <html>
-  hello
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Dehos</title>
+        <link href="style.css" rel="stylesheet" />
+    </head>
+    <body>hello
+        <!--header for containing the categories of the images-->
+        <header></header>
+        <main>
+            <!--main for containing the images, the indications and buttons of pages-->
+            <div class="indication"></div>
+            <div class="container"></div>
+            <div class="indication"></div>
+        </main>
+        <!--footer for containing the informations of copyright or creator or contacs etc.-->
+        <footer></footer>
+        <script src="script.js"></script>
+    </body>
 </html>
