--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Dehos</title>
         <link href="style.css" rel="stylesheet" />
     </head>
-    <body>hello
+    <body>
         <!--header for containing the categories of the images-->
         <header></header>
         <main>
