--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Dehos</title>
+        <title>Rael</title>
         <link href="style.css" rel="stylesheet" />
     </head>
     <body>
@@ -17,6 +17,6 @@
         </main>
         <!--footer for containing the informations of copyright or creator or contacs etc.-->
         <footer></footer>
-        <script src="script.js"></script>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
