--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rael</title>
         <link href="style.css" rel="stylesheet" />
+        <link href="header.css" rel="stylesheet" />
+        <link href="main.css" rel="stylesheet" />
+        <link href="footer.css" rel="stylesheet" />
     </head>
     <body>
         <!--header for containing the categories of the images-->
@@ -16,6 +19,7 @@
             <div class="container"></div>
             <div class="indication"></div>
         </main>
+        <hr>
         <!--footer for containing the informations of copyright or creator or contacs etc.-->
         <footer></footer>
         <script type="module" src="script.js"></script>
