--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="header.css" rel="stylesheet" />
         <link href="main.css" rel="stylesheet" />
         <link href="footer.css" rel="stylesheet" />
+        <link href="biggerImage.css" rel="stylesheet" />
     </head>
     <body>
         <!--header for containing the categories of the images-->
@@ -16,12 +17,14 @@
         <main>
             <!--main for containing the images, the indications and buttons of pages-->
             <div class="indication"></div>
+            <div id="biggerImage"></div>
             <div class="container"></div>
             <div class="indication"></div>
         </main>
         <hr>
         <!--footer for containing the informations of copyright or creator or contacs etc.-->
         <footer></footer>
+        
         <script type="module" src="script.js"></script>
     </body>
 </html>
