--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rael</title>
         <link href="style.css" rel="stylesheet" />
-        <link href="header.css" rel="stylesheet" />
+        <link href="nav.css" rel="stylesheet" />
         <link href="main.css" rel="stylesheet" />
         <link href="footer.css" rel="stylesheet" />
-        <link href="biggerImage.css" rel="stylesheet" />
+        <link href="openImage.css" rel="stylesheet" />
     </head>
     <body>
         <!--header for containing the categories of the images-->
-        <header></header>
-        <hr>
-        <main>
-            <!--main for containing the images, the indications and buttons of pages-->
-            <div class="indication"></div>
-            <div id="biggerImage"></div>
-            <div class="container"></div>
-            <div class="indication"></div>
-        </main>
-        <hr>
+        <header>
+            <h1>Rael: photo gallery</h1>
+        </header>
+        <div>
+            <nav></nav>
+            <main>
+                <hr />
+                <!--main for containing the images, the indications and buttons of pages-->
+                <div class="indication"></div>
+                <div id="biggerImage"></div>
+                <div class="container"></div>
+                <div class="indication"></div>
+                <hr />
+            </main>
+        </div>
         <!--footer for containing the informations of copyright or creator or contacs etc.-->
         <footer></footer>
-        
         <script type="module" src="script.js"></script>
     </body>
 </html>
