some theme adjustments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rael</title>
         <link href="style.css" rel="stylesheet" />
+        <link href="header.css" rel="stylesheet" />
         <link href="nav.css" rel="stylesheet" />
         <link href="main.css" rel="stylesheet" />
         <link href="footer.css" rel="stylesheet" />
