--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>Rael</title>
         <link href="style.css" rel="stylesheet" />
         <link href="header.css" rel="stylesheet" />
-        <link href="nav.css" rel="stylesheet" />
         <link href="main.css" rel="stylesheet" />
+        <link href="nav.css" rel="stylesheet" />
+        <link href="section.css" rel="stylesheet" />
+        <link href="container.css" rel="stylesheet" />
         <link href="footer.css" rel="stylesheet" />
         <link href="openImage.css" rel="stylesheet" />
     </head>
@@ -17,16 +19,16 @@
             <h1>Rael: photo gallery</h1>
         </header>
         <hr />
-        <div>
+        <main>
             <nav></nav>
-            <main>
+            <section>
                 <!--main for containing the images, the indications and buttons of pages-->
                 <div class="indication"></div>
                 <div id="biggerImage"></div>
                 <div class="container"></div>
                 <div class="indication"></div>
-            </main>
-        </div>
+            </section>
+        </main>
         <hr />
         <!--footer for containing the informations of copyright or creator or contacs etc.-->
         <footer></footer>
