--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="section.css" rel="stylesheet" />
         <link href="container.css" rel="stylesheet" />
         <link href="footer.css" rel="stylesheet" />
-        <link href="openImage.css" rel="stylesheet" />
+        <link href="biggerImage.css" rel="stylesheet" />
     </head>
     <body>
         <!--header for containing the categories of the images-->
